--- a/css/style.css
+++ b/css/style.css
@@ -985,6 +985,52 @@ a.article-title:hover {
   max-width: 100%;
   margin: 0 auto;
 }
+.toc-article {
+  background: #eee;
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  margin: 1.5em 0 0.3em 1.5em;
+  padding: 1.2em 1em 0 1em;
+  max-width: 28%;
+}
+.toc-title {
+  font-size: 120%;
+}
+#toc {
+  line-height: 1em;
+  font-size: 0.9em;
+  float: right;
+}
+.toc {
+  padding: 0;
+  margin: 1em;
+  line-height: 1.8em;
+}
+.toc li {
+  list-style-type: none;
+}
+.toc-child {
+  margin-left: 1em;
+}
+#toc-widget {
+  background: #eee;
+}
+#toc-widget-fixed {
+  background: #eee;
+  position: fixed;
+  -webkit-box-shadow: 2px 3px 4px #ccc9c9;
+  box-shadow: 2px 3px 4px #ccc9c9;
+}
+.toc-widget-list {
+  background: #eee;
+  margin: 1.5em 0 0.3em 1.5em;
+  padding: 1.2em 1em 0 1em;
+  max-width: 95%;
+}
+.toc-widget-list li>a {
+  color: #258fb8;
+  font-size: 120%;
+}
 #comments {
   background: #fff;
   -webkit-box-shadow: 1px 2px 3px #ddd;
