--- a/css/style.css
+++ b/css/style.css
@@ -1224,7 +1224,7 @@ a.article-title:hover {
 }
 .article-entry code {
   background: #ffc0cb;
-  color: #333 !important;
+  color: #333;
   border-radius: 4px;
   margin: auto 3px;
   padding: 0 0.3em;
@@ -1232,7 +1232,7 @@ a.article-title:hover {
 .article-entry pre > code {
   background: none;
   text-shadow: none;
-  color: #999 !important;
+  color: #333;
   padding: 0;
 }
 .article-entry .highlight pre {
