--- a/css/style.css
+++ b/css/style.css
@@ -447,9 +447,9 @@ body {
   position: absolute;
   z-index: 100;
   top: 15px;
-  width: 150px;
+  width: 290px;
   height: 30px;
-  right: -150px;
+  right: -290px;
   opacity: 0;
   -webkit-transition: 0.2s ease-out;
   -moz-transition: 0.2s ease-out;
@@ -481,7 +481,7 @@ body {
   border: none;
   background: none;
   color: #333;
-  width: 100%;
+  width: 200%;
   font: 13px "Helvetica Neue", Helvetica, Arial, sans-serif;
   outline: none;
 }
@@ -1560,7 +1560,7 @@ span.ua .location:before {
 @media screen and (max-width: 479px) {
   .back-to-top-btn {
     width: auto;
-    height: 60%;
+    height: 60px;
   }
   .back-to-top-btn:hover {
     border: none;
