--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,8 +4,7 @@
   <% } %>
   <div class="outer">
     <div id="footer-left">
-      &copy; 2014 - <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>&nbsp;|&nbsp;
-      <%= __('theme_by') %> <a href="https://github.com/giscafer/hexo-theme-cafe/" target="_blank">Cafe</a>
+      &copy; 2014 - <%= date(new Date(), 'YYYY') %> <a href="https://github.com/iq9891" target="_blank"><%= config.author || config.title %></a>
     </div>
      <div id="footer-right">
       <%= __('contact') %>&nbsp;|&nbsp;<%= config.email || theme.email  || config.url %>
