--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -150,7 +150,7 @@
   line-height: line-height
   border-top: 1px solid color-border
   padding-top: line-height
-  margin: 0 article-padding article-padding
+  margin: article-padding
   a
     color: color-grey
     text-decoration: none
@@ -222,7 +222,7 @@
 .article-nav-caption
   text-transform: uppercase
   letter-spacing: 2px
-  color: color-grey 
+  color: color-grey
   line-height: 1em
   font-weight: bold
   #article-nav-newer &
@@ -421,7 +421,7 @@ $article-gallery-ctrl
   li
     list-style-type none
 
-.toc-child 
+.toc-child
   margin-left 1em
 
 #toc-widget
