--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -27,6 +27,11 @@
         </div>
         <% } %>
         <%- post.content %>
+        <hr style="margin: 1.6em 0;">
+        <p>转载请注明出处：<a href="<%=url_for(post.path)%>">https://iq9891.github.io<%=url_for(post.path)%></a></p>
+        <p>本文可全文转载，但需得到原作者书面许可，同时保留原作者和出处，摘要引流则随意。</p>
+        <p>如有任何建议或疑问，欢迎留言讨论。</p>
+        <p>如果觉得文章不错的话，欢迎点一下分享。</p>
       <% } %>
     </div>
     <footer class="article-footer">
