--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -11,4 +11,4 @@
     </div>
   </div>
 </footer>
- <%- js('jquery/jquery.min.js') %>
+<script src="//iq9891.github.io/jquery/jquery.min.js"></script>
