--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -31,6 +31,6 @@
   <% if (config.highlight.enable){ %>
     <% /* <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">*/%>
   <% } %>
-  <%- css('css/style') %>
+  <link href="//iq9891.github.io/css/style.css" rel="stylesheet" type="text/css">
   <%- partial('google-analytics') %>
 </head>
