--- a/layout/partials/back2top.ejs
+++ b/layout/partials/back2top.ejs
@@ -1,4 +1,4 @@
-<img class="back-to-top-btn" src="/images/fly-to-top.png"/>
+<img class="back-to-top-btn" src="//iq9891.github.io/images/fly-to-top.png"/>
 <script>
 // Elevator script included on the page, already.
 window.onload = function() {
